--- a/config.yml
+++ b/config.yml
@@ -27,7 +27,10 @@ steps:
   description: Markdown is a markup language
   event: push
   actions: # a list of the actions that will occur when the step is triggered by an event
-  - type: # the type of action, full list at https://lab.github.com/docs/actions
+  - type: gate
+    left: '%payload.pull_request.title%'
+    operator: ===
+    right: add name to README
 
 # Step 2: EDIT HERE -INTERNAL COMMENT FOR STEP 2
 # - title: Headers
