--- a/config.yml
+++ b/config.yml
@@ -31,6 +31,16 @@ steps:
     left: '%payload.pull_request.title%'
     operator: ===
     right: add name to README
+    
+  - type: gate
+    left: '%payload.pull_request.base.ref%'
+    operator: ===
+    right: master
+    else:
+    - type: respond
+      with: 01_try-again.md
+- type: respond
+  with: 01_nice-work.md
 
 # Step 2: EDIT HERE -INTERNAL COMMENT FOR STEP 2
 # - title: Headers
